# nsfw-classifier

./: .dockerignore  DOCS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  logging_config.py  main.py  model.py  queue.py  schemas.py  worker.py
tests/: test_api.py
