[project]
name = "nsfw-detection-api"
version = "1.0.0"
description = "Production-ready NSFW image detection API using Hugging Face transformers"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "transformers>=4.38.0",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
